--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
     "styled-components": "^5.3.6",
+    "validator": "^13.9.0",
     "yup": "^1.0.0"
   },
   "devDependencies": {
