--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^1.3.0",
     "react-icons": "^4.7.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
@@ -21,8 +22,8 @@
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
     "styled-components": "^5.3.6",
-    "validator": "^13.9.0",
     "uuidv4": "^6.2.13",
+    "validator": "^13.9.0",
     "yup": "^1.0.0"
   },
   "devDependencies": {
