--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@reduxjs/toolkit": "^1.9.2",
     "axios": "^1.3.2",
     "date-fns": "^2.29.3",
+    "dayjs": "^1.11.7",
     "formik": "^2.2.9",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
