--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-lottie": "^1.2.3",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
+    "react-scroll-to-top": "^3.0.0",
     "react-toastify": "^9.1.1",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
