--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "date-fns": "^2.29.3",
     "dayjs": "^1.11.7",
     "formik": "^2.2.9",
+    "lottie-react": "^2.4.0",
     "modern-normalize": "^1.1.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
@@ -23,7 +24,6 @@
     "react-helmet-async": "^1.3.0",
     "react-icons": "^4.7.1",
     "react-infinite-scroller": "^1.2.6",
-    "react-lottie": "^1.2.3",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
     "react-scroll-to-top": "^3.0.0",
@@ -35,11 +35,7 @@
     "validator": "^13.9.0",
     "yup": "^1.0.0"
   },
-  "overrides": {
-    "react-lottie": {
-      "react": "^0.14.7 || ^15.0.0 || ^16.0.0 || ^17.0.0 || ^18.2.0"
-    }
-  },
+
   "devDependencies": {
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
